@@ -1,7 +1,6 @@
 package nl.rijksoverheid.mev.brp.brpv;
 
 import nl.rijksoverheid.mev.brp.PersoonslijstFinder;
-import nl.rijksoverheid.mev.brp.brpv.generated.tables.Lo3Pl;
 import nl.rijksoverheid.mev.brp.brpv.generated.tables.Lo3PlGezagsverhouding;
 import nl.rijksoverheid.mev.brp.brpv.generated.tables.Lo3PlVerblijfplaats;
 import nl.rijksoverheid.mev.brp.brpv.generated.tables.records.Lo3PlGezagsverhoudingRecord;
@@ -11,7 +10,6 @@ import nl.rijksoverheid.mev.brp.brpv.generated.tables.records.Lo3PlVerblijfplaat
 import nl.rijksoverheid.mev.gezagsmodule.domain.Persoonslijst;
 import nl.rijksoverheid.mev.gezagsmodule.model.Burgerservicenummer;
 import org.jooq.DSLContext;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -43,7 +41,6 @@ public class JooqPersoonslijstFinder implements PersoonslijstFinder {
         this.create = create;
     }
 
-    @Cacheable("persoonslijsten")
     @Override
     public Optional<Persoonslijst> findPersoonslijst(Burgerservicenummer burgerservicenummer) {
         var plPersoonPersoon = findPlPersoonByPersoonTypeIsPersoonAndBurgerservicenummer(burgerservicenummer);
@@ -60,8 +57,7 @@ public class JooqPersoonslijstFinder implements PersoonslijstFinder {
         var plId = plPersoonPersoonRecent.getPlId();
 
         var inschrijvingen = findInschrijvingen(plId);
-        inschrijvingen.stream()
-            .forEach(result::addInschrijving);
+        inschrijvingen.forEach(result::addInschrijving);
 
         var plPersoonByPersoonType = findPlPersoonByPersoonTypeNotPersoonAndPlId(plId);
 
@@ -103,8 +99,9 @@ public class JooqPersoonslijstFinder implements PersoonslijstFinder {
     private List<Lo3PlRecord> findInschrijvingen(final long plId) {
         return create.selectFrom(LO3_PL)
             .where(LO3_PL.PL_ID.equal(plId))
-            .fetchStreamInto(Lo3PlRecord.class)
-            .collect(Collectors.toList());
+            .fetch()
+            .stream()
+            .toList();
     }
 
     private List<Lo3PlPersoonRecord> findPlPersoonByPersoonTypeIsPersoonAndBurgerservicenummer(
@@ -113,9 +110,11 @@ public class JooqPersoonslijstFinder implements PersoonslijstFinder {
         return create.selectFrom(LO3_PL_PERSOON)
             .where(LO3_PL_PERSOON.BURGER_SERVICE_NR.equal(burgerservicenummer.value())
                 .and(LO3_PL_PERSOON.PERSOON_TYPE.equal(PERSOON))
+                .and(LO3_PL_PERSOON.ONJUIST_IND.isNull())
             )
             .orderBy(LO3_PL_PERSOON.STAPEL_NR.asc(), LO3_PL_PERSOON.VOLG_NR.asc())
-            .fetchStreamInto(Lo3PlPersoonRecord.class)
+            .fetch()
+            .stream()
             .toList();
     }
 
@@ -123,9 +122,11 @@ public class JooqPersoonslijstFinder implements PersoonslijstFinder {
         return create.selectFrom(LO3_PL_PERSOON)
             .where(LO3_PL_PERSOON.PL_ID.equal(plId)
                 .and(LO3_PL_PERSOON.PERSOON_TYPE.notEqual(PERSOON))
+                .and(LO3_PL_PERSOON.ONJUIST_IND.isNull())
             )
-            .orderBy(LO3_PL_PERSOON.PERSOON_TYPE.asc(), LO3_PL_PERSOON.STAPEL_NR.asc(), LO3_PL_PERSOON.VOLG_NR.asc())
-            .fetchStreamInto(Lo3PlPersoonRecord.class)
+            .orderBy(LO3_PL_PERSOON.PERSOON_TYPE.asc(), LO3_PL_PERSOON.STAPEL_NR.desc(), LO3_PL_PERSOON.VOLG_NR.asc())
+            .fetch()
+            .stream()
             .collect(Collectors.groupingBy(Lo3PlPersoonRecord::getPersoonType));
     }
 
@@ -133,6 +134,7 @@ public class JooqPersoonslijstFinder implements PersoonslijstFinder {
         return create.selectFrom(Lo3PlVerblijfplaats.LO3_PL_VERBLIJFPLAATS)
             .where(Lo3PlVerblijfplaats.LO3_PL_VERBLIJFPLAATS.PL_ID.equal(plId)
                 .and(Lo3PlVerblijfplaats.LO3_PL_VERBLIJFPLAATS.VOLG_NR.equal((short) 0))
+                .and(Lo3PlVerblijfplaats.LO3_PL_VERBLIJFPLAATS.ONJUIST_IND.isNull())
             )
             .fetchOptionalInto(Lo3PlVerblijfplaatsRecord.class);
     }
@@ -141,6 +143,7 @@ public class JooqPersoonslijstFinder implements PersoonslijstFinder {
         return create.selectFrom(Lo3PlGezagsverhouding.LO3_PL_GEZAGSVERHOUDING)
             .where(Lo3PlGezagsverhouding.LO3_PL_GEZAGSVERHOUDING.PL_ID.equal(plId)
                 .and(Lo3PlGezagsverhouding.LO3_PL_GEZAGSVERHOUDING.VOLG_NR.equal((short) 0))
+                .and(Lo3PlGezagsverhouding.LO3_PL_GEZAGSVERHOUDING.ONJUIST_IND.isNull())
             )
             .fetchOptionalInto(Lo3PlGezagsverhoudingRecord.class);
     }
